・ログイン画面の背景色修正 ・エリア管理の修正、エリア追加 ・クイズ作成のヘッダー修正

--- a/public/css/management/login.css
+++ b/public/css/management/login.css
@@ -8,10 +8,11 @@
 body, html {
     height: 100%;
     background-repeat: no-repeat;
-    background-image: linear-gradient(rgb(248,220,133), rgb(255, 183, 76));
+    background-image: linear-gradient(rgb(200, 197, 197), rgb(242, 242, 242));
 }
 
 .card-container.card {
+  margin-top: 130px;
     max-width: 350px;
     padding: 40px 40px;
 }
