--- a/public/css/management/makeQuestion.css
+++ b/public/css/management/makeQuestion.css
@@ -6,18 +6,14 @@ body {
 	color:#333;
 	line-height: 22px;
 }
-h1, h2, h3, h4, h5, h6 {
-	font-family: 'Roboto Condensed', sans-serif;
-	font-weight: 400;
-	color:#111;
-	margin-top:5px;
-	margin-bottom:5px;
-}
-h1, h2, h3 {
-	text-transform:uppercase;
+h1 {
+  margin-top: 40px;
+  margin-bottom: 30px;
 }
 .link {
   float: right;
+  margin-top: -60px;
+  margin-right: 30px;
 }
 .text-center {
   margin-top: 20px;
