--- a/templates/management/makeQuestion.html
+++ b/templates/management/makeQuestion.html
@@ -21,7 +21,10 @@
     <div class="row　row_quiz">
       <div class="col-md-12">
         <h1 class="text-center"> クイズ作成 </h1>
-        <p class="link"> <a href="makeQuestion.html" role="button" class="btn btn-link button">クイズ管理へ</a> <a href="makeQuestion.html" role="button" class="btn btn-link button">エリア管理へ</a> </p>
+        <div class="link">
+          <a href="makeQuestion.html" role="button" class="btn btn-link button">クイズ管理へ</a>
+          <a href="http://localhost/tobe_master/management/area" role="button" class="btn btn-link button">エリア管理へ</a>
+        </div>
       </div>
       <!-- class=col-md-12 -->
 
