--- a/templates/web/quiz_multiple_mode.html
+++ b/templates/web/quiz_multiple_mode.html
@@ -57,7 +57,7 @@
 		</div>
 
 		<!-- クイズ出題画面 -->
-		<div class="sec01 active">
+		<div class="sec01">
 			<ul class="slider questionImg">
 				<li>
 					<img src="../../public/images/web/dummy.png" srcset="../../public/images/web/dummy@2x.png 2x, ../../public/images/web/dummy@3x.png 3x" alt="">
@@ -125,31 +125,42 @@
 	</div>
 
 	<!-- みんなの解答結果画面 -->
-	<div class="sec04">
-		<div class="correctPlayer">
-			<h3>正解者</h3>
-			<ul class="playerList02">
-				<li>
-					<img src="../../public/images/web/ico_animal02.png" srcset="../../public/images/web/ico_animal02@2x.png 2x, ../../public/images/web/ico_animal02@3x.png 3x" alt="">
-				</li>
-			</ul>
-		</div>
-		<div class="incorrectPlayer">
-			<h3>不正解者</h3>
-			<ul class="playerList02">
-				<li>
-					<img src="../../public/images/web/ico_animal04.png" srcset="../../public/images/web/ico_animal04@2x.png 2x, ../../public/images/web/ico_animal04@3x.png 3x" alt="">
-				</li>
-			</ul>
-		</div>
-		<div class="dropoutPlayer">
-			<h3>脱落者</h3>
-			<ul class="playerList02">
-				<li>なし</li>
-			</ul>
-		</div>
-		<div class="next">
-			<button type="button" class="btnStyle03" value="">次の問題へ</button>
+	<div class="sec04 active">
+		<div class="inner">
+			<div class="correctPlayer">
+				<h3>正解者</h3>
+				<ul class="playerList02">
+					<li>
+						<img src="../../public/images/web/ico_animal02.png" srcset="../../public/images/web/ico_animal02@2x.png 2x, ../../public/images/web/ico_animal02@3x.png 3x" alt=""><span>シロクマ</span>
+					</li>
+					<li>
+						<img src="../../public/images/web/ico_animal02.png" srcset="../../public/images/web/ico_animal02@2x.png 2x, ../../public/images/web/ico_animal02@3x.png 3x" alt=""><span>シロクマ</span>
+					</li>
+					<li>
+						<img src="../../public/images/web/ico_animal02.png" srcset="../../public/images/web/ico_animal02@2x.png 2x, ../../public/images/web/ico_animal02@3x.png 3x" alt=""><span>シロクマ</span>
+					</li>
+				</ul>
+			</div>
+			<div class="incorrectPlayer">
+				<h3>不正解者</h3>
+				<ul class="playerList02">
+					<li>
+						<img src="../../public/images/web/ico_animal04.png" srcset="../../public/images/web/ico_animal04@2x.png 2x, ../../public/images/web/ico_animal04@3x.png 3x" alt=""><span>カンガルー</span>
+					</li>
+				</ul>
+			</div>
+			<div class="dropoutPlayer">
+				<h3>脱落者</h3>
+				<ul class="playerList02">
+<!--					<li>なし</li>-->
+					<li>
+						<img src="../../public/images/web/ico_animal04.png" srcset="../../public/images/web/ico_animal04@2x.png 2x, ../../public/images/web/ico_animal04@3x.png 3x" alt=""><span>カンガルー</span>
+					</li>
+				</ul>
+			</div>
+			<div class="next">
+				<button type="button" class="btnStyle03" value="">次の問題へ</button>
+			</div>
 		</div>
 	</div>
 
