--- a/templates/web/quiz_multiple_mode.html
+++ b/templates/web/quiz_multiple_mode.html
@@ -125,7 +125,7 @@
 	</div>
 
 	<!-- みんなの解答結果画面 -->
-	<div class="sec04 active">
+	<div class="sec04">
 		<div class="inner">
 			<div class="correctPlayer">
 				<h3>正解者</h3>
@@ -152,7 +152,6 @@
 			<div class="dropoutPlayer">
 				<h3>脱落者</h3>
 				<ul class="playerList02">
-<!--					<li>なし</li>-->
 					<li>
 						<img src="../../public/images/web/ico_animal04.png" srcset="../../public/images/web/ico_animal04@2x.png 2x, ../../public/images/web/ico_animal04@3x.png 3x" alt=""><span>カンガルー</span>
 					</li>
@@ -169,15 +168,15 @@
 		<h2>GAME OVER</h2>
 		<ul class="playerList03">
 			<li>
-				<p class="fL"><img src="../../public/images/web/ico_animal01.png" srcset="../../public/images/web/ico_animal01@2x.png 2x, ../../public/images/web/ico_animal01@3x.png 3x" alt=""></p>
-				<div class="fR">
+				<p class="image"><img src="../../public/images/web/ico_animal01.png" srcset="../../public/images/web/ico_animal01@2x.png 2x, ../../public/images/web/ico_animal01@3x.png 3x" alt=""></p>
+				<div class="text">
 					<p class="playerName">シロクマ</p>
 					<p class="correct">正解数：<span class="num">4</span></p>
 				</div>
 			</li>
 			<li>
-				<p class="fL"><img src="../../public/images/web/ico_animal02.png" srcset="../../public/images/web/ico_animal02@2x.png 2x, ../../public/images/web/ico_animal02@3x.png 3x" alt=""></p>
-				<div class="fR">
+				<p class="image"><img src="../../public/images/web/ico_animal03.png" srcset="../../public/images/web/ico_animal03@2x.png 2x, ../../public/images/web/ico_animal03@3x.png 3x" alt=""></p>
+				<div class="text">
 					<p class="playerName">カンガルー</p>
 					<p class="correct">正解数：<span class="num">0</span></p>
 				</div>
@@ -190,20 +189,34 @@
 	</div>
 
 	<!-- ゲームクリア画面 -->
-	<div class="gameclear">
+	<div class="gameclear active">
 		<h2>GAME CLEAR</h2>
 		<ul class="playerList03">
 			<li>
-				<p class="fL"><img src="../../public/images/web/ico_animal01.png" srcset="../../public/images/web/ico_animal01@2x.png 2x, ../../public/images/web/ico_animal01@3x.png 3x" alt=""></p>
-				<div class="fR">
+				<p class="image"><img src="../../public/images/web/ico_animal01.png" srcset="../../public/images/web/ico_animal01@2x.png 2x, ../../public/images/web/ico_animal01@3x.png 3x" alt=""></p>
+				<div class="text">
 					<p class="master">MASTER</p>
 					<p class="playerName">シロクマ</p>
 					<p class="correct">正解数：<span class="num">10</span></p>
 				</div>
 			</li>
 			<li>
-				<p class="fL"><img src="../../public/images/web/ico_animal02.png" srcset="../../public/images/web/ico_animal02@2x.png 2x, ../../public/images/web/ico_animal02@3x.png 3x" alt=""></p>
-				<div class="fR">
+				<p class="image"><img src="../../public/images/web/ico_animal03.png" srcset="../../public/images/web/ico_animal03@2x.png 2x, ../../public/images/web/ico_animal03@3x.png 3x" alt=""></p>
+				<div class="text">
+					<p class="playerName">カンガルー</p>
+					<p class="correct">正解数：<span class="num">0</span></p>
+				</div>
+			</li>
+			<li>
+				<p class="image"><img src="../../public/images/web/ico_animal01.png" srcset="../../public/images/web/ico_animal01@2x.png 2x, ../../public/images/web/ico_animal01@3x.png 3x" alt=""></p>
+				<div class="text">
+					<p class="playerName">シロクマ</p>
+					<p class="correct">正解数：<span class="num">4</span></p>
+				</div>
+			</li>
+			<li>
+				<p class="image"><img src="../../public/images/web/ico_animal03.png" srcset="../../public/images/web/ico_animal03@2x.png 2x, ../../public/images/web/ico_animal03@3x.png 3x" alt=""></p>
+				<div class="text">
 					<p class="playerName">カンガルー</p>
 					<p class="correct">正解数：<span class="num">0</span></p>
 				</div>
