--- a/templates/web/quiz_multiple_mode.html
+++ b/templates/web/quiz_multiple_mode.html
@@ -15,11 +15,11 @@
 <body>
 <div class="contentIn">
 	<!-- トップページ -->
-	<div class="index">
+	<div class="index active">
 		<h1>めざせ！とべマスター<!-- <img src="../../public/images/web/img_logo01.png" srcset="../../public/images/web/img_logo01@2x.png 2x, ../../public/images/web/img_logo01@3x.png 3x" alt="">--></h1>
 		<ul class="btnList01">
-			<li><button type="button" class="one" value="">ひとりであそぶ</button></li>
-			<li><button type="button" class="all" value="">みんなであそぶ</button></li>
+			<li><button type="button" class="btnStyle06 start" value="">はじめる</button></li>
+			<li><button type="button" class="btnStyle07 rule" value="">ルール説明</button></li>
 		</ul>
 	</div>
 
@@ -189,7 +189,7 @@
 	</div>
 
 	<!-- ゲームクリア画面 -->
-	<div class="gameclear active">
+	<div class="gameclear">
 		<h2>GAME CLEAR</h2>
 		<ul class="playerList03">
 			<li>
