--- a/templates/web/quiz_multiple_mode.html
+++ b/templates/web/quiz_multiple_mode.html
@@ -15,8 +15,8 @@
 <body>
 <div class="contentIn">
 	<!-- トップページ -->
-	<div class="index active">
-		<h1>めざせ！とべマスター<!-- <img src="../../public/images/web/img_logo01.png" srcset="../../public/images/web/img_logo01@2x.png 2x, ../../public/images/web/img_logo01@3x.png 3x" alt="">--></h1>
+	<div class="index">
+		<h1>めざせ！とべマスター</h1>
 		<ul class="btnList01">
 			<li><button type="button" class="btnStyle06 start" value="">はじめる</button></li>
 			<li><button type="button" class="btnStyle07 rule" value="">ルール説明</button></li>
@@ -24,18 +24,18 @@
 	</div>
 
 	<!-- 人数選択画面 -->
-	<div class="playerDecide">
+	<div class="playerDecide active">
 		<ul class="playerList01">
 			<li>
-				<img src="../../public/images/web/ico_penguin01.png" srcset="../../public/images/web/ico_penguin01@2x.png 2x, ../../public/images/web/ico_penguin01@3x.png 3x" alt="">
+				<img src="../../public/images/web/ico_penguin01.png" alt="">
 			</li>
 			<li>
-				<img src="../../public/images/web/ico_bear01.png" srcset="../../public/images/web/ico_bear01@2x.png 2x, ../../public/images/web/ico_bear01@3x.png 3x" alt="">
+				<img src="../../public/images/web/ico_bear01.png" alt="">
 			</li>
 		</ul>
 		<ul class="btnList02">
-			<li><button type="button" class="btnStyle04 minus" value="">減らす</button></li>
-			<li><button type="button" class="btnStyle04 plus" value="">増やす</button></li>
+			<li><button type="button" class="btnStyle08 minus" value="">減らす</button></li>
+			<li><button type="button" class="btnStyle08 plus" value="">増やす</button></li>
 		</ul>
 		<div class="next">
 			<button type="button" class="btnStyle03" value="">ゲームを開始する</button>
@@ -48,7 +48,7 @@
 		<div class="playerConfirm">
 			<h2>プレイヤー確認</h2>
 			<div class="playerArea">
-				<p><img src="../../public/images/web/ico_animal01.png" srcset="../../public/images/web/ico_animal01@2x.png 2x, ../../public/images/web/ico_animal01@3x.png 3x" alt=""></p>
+				<p><img src="../../public/images/web/ico_animal01.png" alt=""></p>
 				<p class="playerName">あなたは<span class="animal">シロクマ</span>さんですか？</p>
 			</div>
 			<div class="outputQuestion">
@@ -60,7 +60,7 @@
 		<div class="sec01">
 			<ul class="slider questionImg">
 				<li>
-					<img src="../../public/images/web/dummy.png" srcset="../../public/images/web/dummy@2x.png 2x, ../../public/images/web/dummy@3x.png 3x" alt="">
+					<img src="../../public/images/web/dummy.png" alt="">
 				</li>
 			</ul>
 			<div class="questionArea">
@@ -71,7 +71,7 @@
 			</div>
 			<div class="time"><div class="timebar"></div></div>
 			<div class="playerArea">
-				<p><img src="../../public/images/web/ico_animal01.png" srcset="../../public/images/web/ico_animal01@2x.png 2x, ../../public/images/web/ico_animal01@3x.png 3x" alt="" class="icon"></p>
+				<p><img src="../../public/images/web/ico_animal01.png" alt="" class="icon"></p>
 				<p class="playerName"><span class="animal">シロクマ</span>さんのターン</p>
 			</div>
 			<ul class="answerArea">
@@ -85,7 +85,7 @@
 	<div class="sec02">
 		<ul class="slider questionImg">
 			<li>
-				<img src="../../public/images/web/dummy.png" srcset="../../public/images/web/dummy@2x.png 2x, ../../public/images/web/dummy@3x.png 3x" alt="">
+				<img src="../../public/images/web/dummy.png" alt="">
 			</li>
 		</ul>
 		<div class="textArea question">
@@ -107,7 +107,7 @@
 	<div class="sec03">
 		<ul class="slider questionImg">
 			<li>
-				<img src="../../public/images/web/dummy.png" srcset="../../public/images/web/dummy@2x.png 2x, ../../public/images/web/dummy@3x.png 3x" alt="">
+				<img src="../../public/images/web/dummy.png" alt="">
 			</li>
 		</ul>
 		<div class="textArea answer">
@@ -131,13 +131,13 @@
 				<h3>正解者</h3>
 				<ul class="playerList02">
 					<li>
-						<img src="../../public/images/web/ico_animal02.png" srcset="../../public/images/web/ico_animal02@2x.png 2x, ../../public/images/web/ico_animal02@3x.png 3x" alt=""><span>シロクマ</span>
+						<img src="../../public/images/web/ico_animal02.png" alt=""><span>シロクマ</span>
 					</li>
 					<li>
-						<img src="../../public/images/web/ico_animal02.png" srcset="../../public/images/web/ico_animal02@2x.png 2x, ../../public/images/web/ico_animal02@3x.png 3x" alt=""><span>シロクマ</span>
+						<img src="../../public/images/web/ico_animal02.png" alt=""><span>シロクマ</span>
 					</li>
 					<li>
-						<img src="../../public/images/web/ico_animal02.png" srcset="../../public/images/web/ico_animal02@2x.png 2x, ../../public/images/web/ico_animal02@3x.png 3x" alt=""><span>シロクマ</span>
+						<img src="../../public/images/web/ico_animal02.png" alt=""><span>シロクマ</span>
 					</li>
 				</ul>
 			</div>
@@ -145,7 +145,7 @@
 				<h3>不正解者</h3>
 				<ul class="playerList02">
 					<li>
-						<img src="../../public/images/web/ico_animal04.png" srcset="../../public/images/web/ico_animal04@2x.png 2x, ../../public/images/web/ico_animal04@3x.png 3x" alt=""><span>カンガルー</span>
+						<img src="../../public/images/web/ico_animal04.png" alt=""><span>カンガルー</span>
 					</li>
 				</ul>
 			</div>
@@ -153,7 +153,7 @@
 				<h3>脱落者</h3>
 				<ul class="playerList02">
 					<li>
-						<img src="../../public/images/web/ico_animal04.png" srcset="../../public/images/web/ico_animal04@2x.png 2x, ../../public/images/web/ico_animal04@3x.png 3x" alt=""><span>カンガルー</span>
+						<img src="../../public/images/web/ico_animal04.png" alt=""><span>カンガルー</span>
 					</li>
 				</ul>
 			</div>
@@ -168,14 +168,14 @@
 		<h2>GAME OVER</h2>
 		<ul class="playerList03">
 			<li>
-				<p class="image"><img src="../../public/images/web/ico_animal01.png" srcset="../../public/images/web/ico_animal01@2x.png 2x, ../../public/images/web/ico_animal01@3x.png 3x" alt=""></p>
+				<p class="image"><img src="../../public/images/web/ico_animal01.png" alt=""></p>
 				<div class="text">
 					<p class="playerName">シロクマ</p>
 					<p class="correct">正解数：<span class="num">4</span></p>
 				</div>
 			</li>
 			<li>
-				<p class="image"><img src="../../public/images/web/ico_animal03.png" srcset="../../public/images/web/ico_animal03@2x.png 2x, ../../public/images/web/ico_animal03@3x.png 3x" alt=""></p>
+				<p class="image"><img src="../../public/images/web/ico_animal03.png" alt=""></p>
 				<div class="text">
 					<p class="playerName">カンガルー</p>
 					<p class="correct">正解数：<span class="num">0</span></p>
@@ -193,7 +193,7 @@
 		<h2>GAME CLEAR</h2>
 		<ul class="playerList03">
 			<li>
-				<p class="image"><img src="../../public/images/web/ico_animal01.png" srcset="../../public/images/web/ico_animal01@2x.png 2x, ../../public/images/web/ico_animal01@3x.png 3x" alt=""></p>
+				<p class="image"><img src="../../public/images/web/ico_animal01.png" alt=""></p>
 				<div class="text">
 					<p class="master">MASTER</p>
 					<p class="playerName">シロクマ</p>
@@ -201,21 +201,21 @@
 				</div>
 			</li>
 			<li>
-				<p class="image"><img src="../../public/images/web/ico_animal03.png" srcset="../../public/images/web/ico_animal03@2x.png 2x, ../../public/images/web/ico_animal03@3x.png 3x" alt=""></p>
+				<p class="image"><img src="../../public/images/web/ico_animal03.png" alt=""></p>
 				<div class="text">
 					<p class="playerName">カンガルー</p>
 					<p class="correct">正解数：<span class="num">0</span></p>
 				</div>
 			</li>
 			<li>
-				<p class="image"><img src="../../public/images/web/ico_animal01.png" srcset="../../public/images/web/ico_animal01@2x.png 2x, ../../public/images/web/ico_animal01@3x.png 3x" alt=""></p>
+				<p class="image"><img src="../../public/images/web/ico_animal01.png" alt=""></p>
 				<div class="text">
 					<p class="playerName">シロクマ</p>
 					<p class="correct">正解数：<span class="num">4</span></p>
 				</div>
 			</li>
 			<li>
-				<p class="image"><img src="../../public/images/web/ico_animal03.png" srcset="../../public/images/web/ico_animal03@2x.png 2x, ../../public/images/web/ico_animal03@3x.png 3x" alt=""></p>
+				<p class="image"><img src="../../public/images/web/ico_animal03.png" alt=""></p>
 				<div class="text">
 					<p class="playerName">カンガルー</p>
 					<p class="correct">正解数：<span class="num">0</span></p>
